Fix menu mobile z-index

--- a/client/src/app/components/Header.scss
+++ b/client/src/app/components/Header.scss
@@ -305,7 +305,7 @@ header {
 
     .menu--expanded {
       position: fixed;
-      z-index: 1;
+      z-index: 3;
       left: 0;
       width: 100%;
       height: 0;
